--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Nebulae</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
