added new fonts

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8" />
     <title>Nebulae</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Open+Sans:wght@800&family=Poppins&family=Work+Sans:ital,wght@1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
